blockml/test/valid/04_calc_refs_dim/v8/v8m.model
model: v8m
joins:
- from_view: v8_one
  as: a

