blockml/test/errors/01_yaml/e121/e121m.model
model: e121m
description:   
  7: 55
joins:
- from_view: e121_one
  as: a
